<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fibers_with_jdk_loom</groupId>
    <artifactId>fibers_with_jdk_loom</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <jdk.version>16</jdk.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.surefire.version>2.22.0</maven.surefire.version>
        <jaxb.version>2.3.1</jaxb.version>
        <glassfish.corba.version>4.2.0-b004</glassfish.corba.version>
        <jta.version>1.3</jta.version>
        <annotation.version>1.3.2</annotation.version>
        <jaxws.version>2.3.1</jaxws.version>
        <junit.jupiter.version>5.3.1</junit.jupiter.version>
        <junit.platform.version>1.3.1</junit.platform.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!--
        https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/
        http://tutorials.jenkov.com/maven/java-compiler.html
        https://stackoverflow.com/questions/54467287/how-to-specify-java-11-version-in-spring-spring-boot-pom-xml
        https://dzone.com/articles/guide-for-supporting-multiple-versions-of-java-8-1
        https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9
        https://maven.apache.org/guides/mini/guide-using-toolchains.html
    -->
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>${jdk.version}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!--
                https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
